--- a/LaTeX/formularz_oceny_pracy.tex
+++ b/LaTeX/formularz_oceny_pracy.tex
@@ -1,6 +1,6 @@
 \pagestyle{empty}
 \begin{center}
-\begin{tabular}{|}
+\begin{tabular}{c}
 \bf{\Large{Formularz oceny pracy magisterskiej}}
 \end{tabular}
 \end{center}
