--- a/LaTeX/wmstitle_mgr.sty
+++ b/LaTeX/wmstitle_mgr.sty
@@ -156,27 +156,18 @@
   \newpage\thispagestyle{empty}
     %\vspace*{2\baselineskip}
     \begin{center}
-			{\large\bfseries O{\m@s}wiadczenie studenta}\par\bigskip
+			{\large\bfseries O{\m@s}wiadczenie studenta}\par
     \end{center}
     {\itshape
-Uprzedzony(-a) o odpowiedzialno\'sci karnej na podstawie art. 115 ust. 1 i 2 ustawy z dnia 4 lutego 1994 r.
+Uprzedzony o odpowiedzialno\'sci karnej na podstawie art. 115 ust. 1 i 2 ustawy z dnia 4 lutego 1994 r.
 o prawie autorskim i prawach pokrewnych (t.j. Dz.U. z 2018 r. poz. 1191 z p\'o\'zn. zm.):
-„Kto przywłaszcza sobie autorstwo albo wprowadza w błąd co do autorstwa cało\'sci lub czę\'sci cudzego utworu albo artystycznego wykonania, podlega grzywnie, karze ograniczenia wolno\'sci albo
-pozbawienia wolno\'sci do lat 3. Tej samej karze podlega, kto rozpowszechnia bez podania nazwiska
-lub pseudonimu tw\'orcy cudzy utw\'or w wersji oryginalnej albo w postaci opracowania, artystyczne
-wykonanie albo publicznie zniekształca taki utw\'or, artystyczne wykonanie, fonogram, wideogram lub nadanie.",
-a także uprzedzony(-a) o odpowiedzialno\'sci dyscyplinarnej na podstawie art. 307 ust. 1 ustawy z dnia 20 lipca 2018 r.
-Prawo o szkolnictwie wyższym i nauce (Dz. U.
-z 2018 r. poz. 1668 z p\'o\'zn. zm.)
-„Student podlega odpowiedzialno\'sci dyscyplinarnej za naruszenie
-przepis\'ow obowiązujących w uczelni oraz za czyn uchybiający godno\'sci studenta.",
-o\'swiadczam, że niniejszą pracę dyplomową wykonałem(-am) osobi\'scie
-i samodzielnie i nie korzystałem(-am) ze \'zr\'odeł innych niż wymienione w pracy.
-Jednocze\'snie Uczelnia informuje, że zgodnie z art. 15a ww. ustawy o prawie autorskim
-i prawach pokrewnych Uczelni przysługuje pierwszeństwo w opublikowaniu pracy dyplomowej studenta.
-Jeżeli Uczelnia nie opublikowała pracy dyplomowej w terminie
-6 miesięcy od dnia jej obrony, autor może ją opublikowa\'c, chyba że praca jest czę\'scią utworu zbiorowego.
-Ponadto Uczelnia jako podmiot, o kt\'orym mowa w art. 7 ust. 1 pkt 1 ustawy z dnia 20 lipca 2018 r.
+„Kto przywłaszcza sobie autorstwo albo wprowadza w błąd co do autorstwa cało\'sci lub czę\'sci cudzego utworu albo artystycznego wykonania, podlega grzywnie, karze ograniczenia wolno\'sci albo pozbawienia wolno\'sci do lat 3. Tej samej karze podlega, kto rozpowszechnia bez podania nazwiska
+lub pseudonimu tw\'orcy cudzy utw\'or w wersji oryginalnej albo w postaci opracowania, artystyczne wykonanie albo publicznie zniekształca taki utw\'or, artystyczne wykonanie, fonogram, wideogram lub nadanie.", a także uprzedzony o odpowiedzialno\'sci dyscyplinarnej na podstawie art. 307 ust. 1 ustawy z dnia 20 lipca 2018 r.
+Prawo o szkolnictwie wyższym i nauce (Dz. U. z 2018 r. poz. 1668 z p\'o\'zn. zm.)
+„Student podlega odpowiedzialno\'sci dyscyplinarnej za naruszenie przepis\'ow obowiązujących w uczelni oraz za czyn uchybiający godno\'sci studenta.",
+o\'swiadczam, że niniejszą pracę dyplomową wykonałem osobi\'scie i samodzielnie i nie korzystałem ze \'zr\'odeł innych niż wymienione w pracy.
+Jednocze\'snie Uczelnia informuje, że zgodnie z art. 15a ww. ustawy o prawie autorskim i prawach pokrewnych Uczelni przysługuje pierwszeństwo w opublikowaniu pracy dyplomowej studenta.
+Jeżeli Uczelnia nie opublikowała pracy dyplomowej w terminie 6 miesięcy od dnia jej obrony, autor może ją opublikowa\'c, chyba że praca jest czę\'scią utworu zbiorowego. Ponadto Uczelnia jako podmiot, o kt\'orym mowa w art. 7 ust. 1 pkt 1 ustawy z dnia 20 lipca 2018 r.
 $-$ Prawo o szkolnictwie wyższym i nauce (Dz. U. z 2018 r. poz. 1668 z p\'o\'zn. zm.), może korzysta\'c bez
 wynagrodzenia i bez konieczno\'sci uzyskania zgody autora z utworu stworzonego przez studenta w wyniku
 wykonywania obowiązk\'ow związanych z odbywaniem studi\'ow, udostępnia\'c utw\'or ministrowi wła\'sciwemu do spraw
@@ -185,14 +176,14 @@ w celu sprawdzania z wykorzystaniem systemu antyplagiatowego. Minister wła\'sci
 może korzysta\'c z prac dyplomowych znajdujących się w prowadzonych przez niego bazach danych w zakresie niezbędnym do
 zapewnienia prawidłowego utrzymania i rozwoju tych baz oraz wsp\'ołpracujących z nimi system\'ow informatycznych.}
 
-\vspace{2\baselineskip}
+\vspace{1.75\baselineskip}
 	  \hfill\parbox{15em}{{\small\dotfill}\\[-.3ex] \centerline{\footnotesize(Podpis czytelny studenta)}}\par
-    \vspace{3\baselineskip}
+    \vspace{\baselineskip}
 	  \begin{center}
-      {\large\bfseries O\'swiadczenie promotora}\par\bigskip
+      {\large\bfseries O\'swiadczenie promotora}\par
 	  \end{center}
 	    {\itshape O\'swiadczam, że praca spełnia wymogi stawiane pracom magisterskim.}
-	  \par\vspace{2\baselineskip}
+	  \par\vspace{1.75\baselineskip}
 	  \hfill\parbox{15em}{{\small\dotfill}\\[-.3ex] \centerline{\footnotesize(Podpis promotora)}}\par
 	 \setcounter{page}{0}
    \end{titlepage}%
