--- a/LaTeX/formularz_oceny_pracy.tex
+++ b/LaTeX/formularz_oceny_pracy.tex
@@ -4,37 +4,38 @@
 \bf{\Large{Formularz oceny pracy magisterskiej}}
 \end{tabular}
 \end{center}
-\vskip1cm
-
+\vskip0.5cm
 
 \rm {\bf{
-\noindent
-Imie i nazwisko: Piotr Mikler\\
-Nr albumu: 409145\\
-Temat pracy: To be done}}
+		\noindent
+		Imie i nazwisko: Piotr Mikler\\
+		Nr albumu: 409145\\
+		Temat pracy: To be done
+	}}
 \vskip0.5cm
 
 \leftline{\begin{tabular}{c}dr inż. Jerzy Dzieża\\\hline \\
 \small{\it{(opiekun)}}
 \end{tabular}} \vskip0.5cm
 
-\centerline{
-\begin{tabular}{|p{3.in}|l|l|} \hline
-Kryterium & Waga & Ocena\\
-\hline \hline (M) Merytoryczna ocena pracy & 0,7 & \\
-\hline (F) Ocena formalnej strony pracy & 0,3 & \\
-\hline\hline (O) Ocena końcowa (0,7 M+0,3 F) &  &\\
- \hline
-\end{tabular}
-}
-\vskip0.5cm Uzasadnienie oceny skrajnej (2,0, 5,0):
+\begin{center}
+	\begin{tabular}{|p{3.in}|l|l|} \hline
+		Kryterium & Waga & Ocena\\
+		\hline \hline (M) Merytoryczna ocena pracy & 0.7 & \\
+		\hline (F) Ocena formalnej strony pracy & 0.3 & \\
+		\hline\hline (O) Ocena końcowa (0.7 M + 0.3 F) &  &\\
+		 \hline
+	\end{tabular}
+\end{center}
+Uzasadnienie oceny skrajnej (2.0, 5.0):
 \vskip2cm
-\centerline{
-\begin{tabular}{|p{3.in}|l|l|} \hline
- Ocena za prezentację pracy magisterskiej &   ...................\\
- \hline
-\end{tabular}
-}
+
+\begin{center}
+	\begin{tabular}{|p{3.in}|l|l|} \hline
+	 Ocena za prezentację pracy magisterskiej &   ................... & \\
+	 \hline
+	\end{tabular}
+\end{center}
 \vskip0.5cm
 \rightline{\it{Podpis opiekuna:..................................................}}
 \vskip0.5cm
@@ -42,20 +43,20 @@ Kryterium & Waga & Ocena\\
 \leftline{\begin{tabular}{c} \qquad \qquad \qquad  \qquad \qquad \qquad \qquad\\ \hline \\
 \small{\it{(recenzent)}}
 \end{tabular}} \vskip0.5cm
-\centerline{
-\begin{tabular}{|p{3.in}|l|l|} \hline
-Kryterium & Waga & Ocena\\
-\hline \hline (M) Merytoryczna ocena pracy & 0,7 & \\
-\hline (F) Ocena formalnej strony pracy & 0,3 & \\
-\hline\hline (R) Ocena końcowa (0,7 M+0,3 F)&  &\\
- \hline
-\end{tabular}
-}
-\vskip0.5cm Uzasadnienie oceny skrajnej (2,0, 5,0):
-\vskip2cm
+\begin{center}
+	\begin{tabular}{|p{3.in}|l|l|} \hline
+	Kryterium & Waga & Ocena\\
+	\hline \hline (M) Merytoryczna ocena pracy & 0.7 & \\
+	\hline (F) Ocena formalnej strony pracy & 0.3 & \\
+	\hline\hline (R) Ocena końcowa (0.7 M + 0.3 F)&  &\\
+	 \hline
+	\end{tabular}
+\end{center}
+Uzasadnienie oceny skrajnej (2.0, 5.0):
+\vskip1.75cm
 \rightline{\it{Podpis recenzenta:..................................................}}
-\vskip1cm
-Ocena pracy (0,5 O + 0,5 R): ...............................................................
-
+\vskip0.75cm
+Ocena pracy (0.5 O + 0.5 R): ...............................................................
+\newpage
 %\end{document}
 
