Update file names

--- a/LaTeX/Parent.tex
+++ b/LaTeX/Parent.tex
@@ -36,12 +36,12 @@
 %%---------DOC---------%%
 \begin{document}
 % AGH Template
-\input{okladka_mgr.tex}
-\input{formularz_oceny_pracy.tex}
+\input{001_okladka_mgr.tex}
+\input{002_formularz_oceny_pracy.tex}
 
 % Content
 \tableofcontents
-\include{rozdzial1}
+\include{003_wstep.tex}
 
 % Bibliography
 \printbibliography
