Update figure location and references

--- a/LaTeX/Parent.tex
+++ b/LaTeX/Parent.tex
@@ -15,6 +15,7 @@
 \usepackage{titlesec}
 \usepackage[style=numeric, sorting=none, language=autobib, autolang=other, 
 			backref=false, isbn=true, url=false, maxbibnames=3, backend=biber]{biblatex}
+\usepackage{graphicx}
 
 %% Defining commands
 \newtheorem{defi}{Definicja}[section]
@@ -28,6 +29,7 @@
 
 % Additional sources
 \addbibresource{bibliografia.bib}
+\graphicspath{{Figs}}
 
 % Style options
 \titlespacing\section{0pt}{24pt plus 4pt minus 2pt}{24pt plus 2pt minus 2pt}
