Update of codes

--- a/003_Code/Python/Nasdaq Data.ipynb
+++ b/003_Code/Python/Nasdaq Data.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "id": "79cb6c14",
    "metadata": {},
    "outputs": [],
@@ -45,14 +45,14 @@
     "    \n",
     "    data = pd.concat([corp_data, tbill_data], axis = 1)\n",
     "    data.index.name = 'Date'\n",
-    "    data.dropna().to_csv('../data/CorpYields.csv')\n",
+    "    data.dropna().to_csv('../../001_Data/CorpYields.csv')\n",
     "else:\n",
-    "    data = pd.read_csv('../data/CorpYields.csv', index_col='Date')"
+    "    data = pd.read_csv('../../001_Data/CorpYields.csv', index_col='Date')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "id": "8a24c778-47fc-4e10-8b3d-b16f32f22785",
    "metadata": {},
    "outputs": [
@@ -100,87 +100,87 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2010-03-24</th>\n",
-       "      <td>3.54</td>\n",
-       "      <td>4.48</td>\n",
-       "      <td>3.69</td>\n",
-       "      <td>5.16</td>\n",
-       "      <td>7.03</td>\n",
-       "      <td>8.17</td>\n",
-       "      <td>11.96</td>\n",
-       "      <td>0.44</td>\n",
+       "      <th>2020-01-17</th>\n",
+       "      <td>2.50</td>\n",
+       "      <td>2.58</td>\n",
+       "      <td>2.35</td>\n",
+       "      <td>3.10</td>\n",
+       "      <td>3.56</td>\n",
+       "      <td>5.02</td>\n",
+       "      <td>11.20</td>\n",
+       "      <td>1.56</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1999-01-11</th>\n",
-       "      <td>5.79</td>\n",
-       "      <td>6.14</td>\n",
-       "      <td>5.84</td>\n",
-       "      <td>6.87</td>\n",
-       "      <td>8.16</td>\n",
-       "      <td>10.70</td>\n",
-       "      <td>17.57</td>\n",
-       "      <td>4.62</td>\n",
+       "      <th>2013-05-02</th>\n",
+       "      <td>1.91</td>\n",
+       "      <td>2.30</td>\n",
+       "      <td>1.93</td>\n",
+       "      <td>3.16</td>\n",
+       "      <td>4.23</td>\n",
+       "      <td>5.14</td>\n",
+       "      <td>8.53</td>\n",
+       "      <td>0.11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-12-03</th>\n",
-       "      <td>2.86</td>\n",
-       "      <td>3.08</td>\n",
-       "      <td>2.77</td>\n",
-       "      <td>4.27</td>\n",
-       "      <td>5.81</td>\n",
-       "      <td>8.13</td>\n",
-       "      <td>16.74</td>\n",
-       "      <td>0.57</td>\n",
+       "      <th>2016-12-28</th>\n",
+       "      <td>3.10</td>\n",
+       "      <td>3.14</td>\n",
+       "      <td>2.80</td>\n",
+       "      <td>3.84</td>\n",
+       "      <td>4.67</td>\n",
+       "      <td>6.08</td>\n",
+       "      <td>11.71</td>\n",
+       "      <td>0.90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2018-03-05</th>\n",
-       "      <td>3.42</td>\n",
-       "      <td>3.54</td>\n",
-       "      <td>3.28</td>\n",
-       "      <td>4.06</td>\n",
-       "      <td>4.96</td>\n",
-       "      <td>6.30</td>\n",
-       "      <td>10.50</td>\n",
-       "      <td>2.06</td>\n",
+       "      <th>2014-04-17</th>\n",
+       "      <td>2.62</td>\n",
+       "      <td>2.76</td>\n",
+       "      <td>2.50</td>\n",
+       "      <td>3.63</td>\n",
+       "      <td>4.42</td>\n",
+       "      <td>5.39</td>\n",
+       "      <td>8.73</td>\n",
+       "      <td>0.11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2017-12-12</th>\n",
-       "      <td>2.97</td>\n",
-       "      <td>3.04</td>\n",
-       "      <td>2.78</td>\n",
-       "      <td>3.60</td>\n",
-       "      <td>4.30</td>\n",
-       "      <td>5.82</td>\n",
-       "      <td>10.70</td>\n",
-       "      <td>1.70</td>\n",
+       "      <th>2013-04-25</th>\n",
+       "      <td>1.95</td>\n",
+       "      <td>2.34</td>\n",
+       "      <td>1.99</td>\n",
+       "      <td>3.21</td>\n",
+       "      <td>4.33</td>\n",
+       "      <td>5.39</td>\n",
+       "      <td>8.86</td>\n",
+       "      <td>0.12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2006-10-18</th>\n",
-       "      <td>5.41</td>\n",
-       "      <td>5.68</td>\n",
-       "      <td>5.46</td>\n",
-       "      <td>6.07</td>\n",
-       "      <td>7.01</td>\n",
-       "      <td>7.98</td>\n",
-       "      <td>10.84</td>\n",
-       "      <td>5.04</td>\n",
+       "      <th>2004-10-07</th>\n",
+       "      <td>4.26</td>\n",
+       "      <td>4.46</td>\n",
+       "      <td>3.99</td>\n",
+       "      <td>5.08</td>\n",
+       "      <td>6.01</td>\n",
+       "      <td>7.19</td>\n",
+       "      <td>11.59</td>\n",
+       "      <td>2.26</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             AAA     A    AA   BBB    BB      B    CCC  TBILL_1Y\n",
-       "Date                                                            \n",
-       "2010-03-24  3.54  4.48  3.69  5.16  7.03   8.17  11.96      0.44\n",
-       "1999-01-11  5.79  6.14  5.84  6.87  8.16  10.70  17.57      4.62\n",
-       "2015-12-03  2.86  3.08  2.77  4.27  5.81   8.13  16.74      0.57\n",
-       "2018-03-05  3.42  3.54  3.28  4.06  4.96   6.30  10.50      2.06\n",
-       "2017-12-12  2.97  3.04  2.78  3.60  4.30   5.82  10.70      1.70\n",
-       "2006-10-18  5.41  5.68  5.46  6.07  7.01   7.98  10.84      5.04"
+       "             AAA     A    AA   BBB    BB     B    CCC  TBILL_1Y\n",
+       "Date                                                           \n",
+       "2020-01-17  2.50  2.58  2.35  3.10  3.56  5.02  11.20      1.56\n",
+       "2013-05-02  1.91  2.30  1.93  3.16  4.23  5.14   8.53      0.11\n",
+       "2016-12-28  3.10  3.14  2.80  3.84  4.67  6.08  11.71      0.90\n",
+       "2014-04-17  2.62  2.76  2.50  3.63  4.42  5.39   8.73      0.11\n",
+       "2013-04-25  1.95  2.34  1.99  3.21  4.33  5.39   8.86      0.12\n",
+       "2004-10-07  4.26  4.46  3.99  5.08  6.01  7.19  11.59      2.26"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "id": "7d585799",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "id": "4b50f41c",
    "metadata": {},
    "outputs": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "id": "d69b0502",
    "metadata": {},
    "outputs": [],
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 11,
    "id": "8971346f-ae75-49d7-b4fb-b4bece6f443a",
    "metadata": {},
    "outputs": [],
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 12,
    "id": "62957c00",
    "metadata": {},
    "outputs": [],
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 13,
    "id": "9f5c4c35",
    "metadata": {},
    "outputs": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 14,
    "id": "5d24ed23",
    "metadata": {},
    "outputs": [],
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 15,
    "id": "7e2fa02d",
    "metadata": {},
    "outputs": [
@@ -333,7 +333,7 @@
        "<AxesSubplot:xlabel='Date'>"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 16,
    "id": "9cb9898c",
    "metadata": {},
    "outputs": [
@@ -434,7 +434,7 @@
        "CCC -0.476616 -0.670071"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -456,14 +456,6 @@
     "                                                        figure_axis_size=10)\n",
     "correlation_matrix"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ff8b846a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
