Adjust biblatex options

--- a/002_LaTeX/003_wstep.tex
+++ b/002_LaTeX/003_wstep.tex
@@ -11,7 +11,7 @@
 \label{sec:celePracy}
 
 
-Celem poniższej pracy jest zapoznanie studentów z systemem \LaTeX~w zakresie umożliwiającym im samodzielne, profesjonalne złożenie pracy dyplomowej w systemie \LaTeX \cite{Dil00}.
+Celem poniższej pracy jest zapoznanie studentów z systemem \LaTeX~w zakresie umożliwiającym im samodzielne, profesjonalne złożenie pracy dyplomowej w systemie \LaTeX (\cite{Cherubini_Copula_Methods_in_Finance}).
 \subsection{Jakiś tytuł}
 
 \subsubsection{Jakiś tytuł w subsubsection}
