--- a/002_LaTeX/Parent.tex
+++ b/002_LaTeX/Parent.tex
@@ -13,8 +13,7 @@
 \usepackage{enumitem}
 \usepackage{indentfirst}
 \usepackage{titlesec}
-\usepackage[style=numeric, sorting=none, language=autobib, autolang=other, 
-			backref=false, isbn=true, url=false, maxbibnames=3, backend=biber]{biblatex}
+\usepackage[style=authoryear, citestyle=authoryear, backend=biber]{biblatex}
 \usepackage{graphicx}
 
 %% Defining commands
