--- a/003_Code/Python/crush_spread.ipynb
+++ b/003_Code/Python/crush_spread.ipynb
@@ -1758,6 +1758,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "0ef9f226-5938-43fc-968a-134cc23e1f62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Tail dependence"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 85,
    "id": "8c7bffeb-02ea-437a-94ca-03b44190f677",
    "metadata": {},
