--- a/003_Code/Python/crush_spread.ipynb
+++ b/003_Code/Python/crush_spread.ipynb
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "fddac07e-2f0a-439f-92bb-ccd222ff3485",
    "metadata": {},
    "outputs": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "8e260488-53d3-46a3-946f-88ae807e6ae3",
    "metadata": {},
    "outputs": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "59463937-ed89-43c1-a194-f1486af99830",
    "metadata": {},
    "outputs": [
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "7606393e-8d2a-4a47-a170-df86bf50e78e",
    "metadata": {},
    "outputs": [
@@ -1122,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 3,
    "id": "26850a32-0cfb-467f-a632-2c1e2f8b66d5",
    "metadata": {},
    "outputs": [],
@@ -1273,7 +1273,47 @@
    "id": "fbd74c0f-d3d0-49aa-a23c-1a9069a5483b",
    "metadata": {},
    "source": [
-    "## PLOTS for KKMF"
+    "plot_copula_surface(best_fit, f\"Best fit copula: {best_fit.family.name}\")## PLOTS for KKMF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "5b07d263-de73-460a-b0f7-51ae2df8778d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.spatial import Delaunay\n",
+    "import plotly.figure_factory as ff\n",
+    "import plotly.express as px\n",
+    "\n",
+    "copula = pv.Bicop(family=pv.gumbel, parameters=[2.0])\n",
+    "margin=0.06\n",
+    "u = np.linspace(margin, 1-margin, 15)\n",
+    "v = np.linspace(margin, 1-margin, 15)\n",
+    "u,v = np.meshgrid(u,v)\n",
+    "u = u.flatten()\n",
+    "v = v.flatten()\n",
+    "\n",
+    "points2D = np.vstack([u,v]).T\n",
+    "tri = Delaunay(points2D)\n",
+    "simplices = tri.simplices\n",
+    "\n",
+    "Z = copula.pdf(points2D)\n",
+    "Z = np.reshape(Z, np.shape(u))\n",
+    "\n",
+    "fig = ff.create_trisurf(x=u, y=v, z=Z,\n",
+    "                        simplices=simplices,\n",
+    "                        title=\"T Copula density\", aspectratio=dict(x=1, y=1, z=1), colormap = px.colors.sequential.turbid_r)\n",
+    "\n",
+    "camera = dict(\n",
+    "    center=dict(x=0, y=0, z=0),\n",
+    "    eye=dict(x=-0.8, y=-1.35, z=1))\n",
+    "\n",
+    "fig.update_layout(title=f\"{copula.family.name.capitalize()} copula\", autosize=False,\n",
+    "                  width=500, height=500,\n",
+    "                  margin=dict(l=0, r=0, b=10, t=40), scene_camera=camera)\n",
+    "writeimage(fig, 'VisualGumbel')"
    ]
   },
   {
@@ -1370,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 421,
+   "execution_count": 10,
    "id": "058ee03c-27af-40cc-af32-b4af4668504a",
    "metadata": {},
    "outputs": [
