--- a/002_LaTeX/Parent.tex
+++ b/002_LaTeX/Parent.tex
@@ -1,49 +1,72 @@
-%%---------PREAMBLE---------%%
-\documentclass[12pt, a4paper]{article}
-\usepackage[pdftex, man]{wmstitle_mgr}
-
-%% Packages
+\documentclass[mfu, pdftex]{mgrwms}
+\usepackage[utf8]{inputen
+\usepackage{amsmath}
+\newcommand\numberthis{\addtocounter{equation}{1}\tag{\theequation}}
+\usepackage{amssymb} 
+\usepackage{latexsym}
+\usepackage{amsthm}
+\usepackage{enumerate}
+\usepackage{color}
 \usepackage[polish]{babel}
 \usepackage[OT4]{fontenc}
-\usepackage[utf8]{inputenc}
-\usepackage{csquotes}
-\usepackage{amsmath, amsfonts, mathdots, 
-			amssymb, yfonts, amsthm, geometry}
-\usepackage{float}
-\usepackage{enumitem}
-\usepackage{indentfirst}
-\usepackage{titlesec}
-\usepackage[style=authoryear, citestyle=authoryear, backend=biber]{biblatex}
-\usepackage{graphicx}
+\usepackage{polski}
+\allowdisplaybreaks
 
-%% Defining commands
-\newtheorem{defi}{Definicja}[section]
-\newtheorem{tw}{Twierdzenie}[section]
-\newtheorem{conclusion}{Wniosek}[section]
-\newtheorem{lem}{Lemat}
-\newtheorem{uw}{Uwaga}
-\newtheorem{prz}{Przykład}[section]
-\theoremstyle{definition}
-\newtheorem*{dow}{Dowód}
-
-% Additional sources
-\addbibresource{bibliografia.bib}
-\graphicspath{{Figs}}
-
-% Style options
-\titlespacing\section{0pt}{24pt plus 4pt minus 2pt}{24pt plus 2pt minus 2pt}
-\titlespacing\subsection{0pt}{20pt plus 4pt minus 2pt}{20pt plus 2pt minus 2pt}
-
-%%---------DOC---------%%
 \begin{document}
-% AGH Template
-\input{001_okladka_mgr.tex}
-\input{002_formularz_oceny_pracy.tex}
 
-% Content
+\title{\LARGE Zastosowanie modeli kopułowych do modelowania crush spreadu.}
+\author{Piotr Mikler}
+\promotor{dr inż. Jerzy Dzieża}
+\nralbumu{409145}
+\maketitle
+\slowakluczowe{crush spread, soja, opcje, copuła, vine copula}
+\keywords{crush spread, soybean, option, copula, vine copula}
+
+\newtheorem{thm}{\indent Twierdzenie}[chapter]
+\newtheorem{lemma}[thm]{\indent Lemat}
+\newtheorem{cor}[thm]{\indent Wniosek}
+\newtheorem{obs}[thm]{\indent Obserwacja}
+\newtheorem{uw}[thm]{\indent Uwaga}
+\newtheorem{df}[thm]{Definicja}
+\newcommand{\E}{\mathbb{E}}
+\newcommand{\R}{\mathbb{R}}
+\newcommand{\Pra}{\mathbb{Pra}}
+
+\makeatletter
+\newcommand*{\defeq}{\mathrel{\rlap{%
+                     \raisebox{0.3ex}{$\m@th\cdot$}}%
+                     \raisebox{-0.3ex}{$\m@th\cdot$}}%
+                     =}
+\let\c@table\c@figure
+\makeatother
+
 \tableofcontents
-\include{003_wstep.tex}
+\begin{streszczenie}
+Streszczenie po polsku, max 1 str
+\end{streszczenie}
 
-% Bibliography
-\printbibliography
+\begin{abstract}
+Abstract in english, maximum of one page
+\end{abstract}
+
+
+\begin{wstep}    % ew. \begin{wstep}[Wprowadzenie]
+Wstep
+
+\end{wstep}
+
+\chapter{Rozdział 1}
+\mgrclosechapter
+
+% \appendix
+% \chapter{----}
+%%
+%-> Treść dodatku A
+%%
+% \mgrclosechapter
+%%
+%%
+\bibliography{<pliki bib>} 
 \end{document}
+
+%% =========================================================== %%
