Fix: Bibliography generation

--- a/002_LaTeX/Parent.tex
+++ b/002_LaTeX/Parent.tex
@@ -12,6 +12,8 @@
 \usepackage{polski}
 \usepackage{graphicx}
 \graphicspath{{Figs}}
+\bibliographystyle{apalike}
+
 \allowdisplaybreaks
 
 \begin{document}
@@ -58,7 +60,7 @@
 % \mgrclosechapter
 %%
 %%
-\bibliography{<pliki bib>} 
+\bibliography{bibliography.bib} 
 \end{document}
 
 %% =========================================================== %%
