--- a/002_LaTeX/wstep.tex
+++ b/002_LaTeX/wstep.tex
@@ -1,4 +1,4 @@
 \begin{wstep}[Wprowadzenie]    % ew. \begin{wstep}[Wprowadzenie]
-	Wstep
+	Wstep \cite{Bernard_Pricing_Multivariate_Options_with_copulae} example
 	
 \end{wstep}
