Add: chapter on multidimensional models

--- a/002_LaTeX/Parent.tex
+++ b/002_LaTeX/Parent.tex
@@ -11,6 +11,8 @@
 \usepackage[OT4]{fontenc}
 \usepackage{polski}
 \usepackage{graphicx}
+\usepackage{float}
+\usepackage{placeins}
 \graphicspath{{Figs}}
 \bibliographystyle{apalike}
 
@@ -18,7 +20,7 @@
 
 \begin{document}
 
-\title{\LARGE Zastosowanie modeli kopułowych do analizy spreadu aktywów}
+\title{\LARGE Zastosowanie modeli kopułowych do modelowania spreadu aktywów}
 \author{Piotr Mikler}
 \promotor{dr inż. Jerzy Dzieża}
 \nralbumu{409145}
@@ -48,6 +50,7 @@
 %% --- BODY --- %%
 \input{streszczenie}
 \tableofcontents
+
 \input{wstep}
 \input{modelowanie_wielowymiarowych_zmiennych_losowych}
 \input{spread_na_rynkach_finansowych}
@@ -60,6 +63,7 @@
 % \mgrclosechapter
 %%
 %%
+%\bibliographystyle{bibliography_style}
 \bibliography{bibliography.bib} 
 \end{document}
 
