--- a/002_LaTeX/bibliography.bib
+++ b/002_LaTeX/bibliography.bib
@@ -1,10 +1,77 @@
 %% Theory
 
+% Elements of probability
+@book{Rachunek_prob,
+author = {Kordecki, Wojciech},
+publisher={Wydawnictwo GIS},
+year = {2010},
+month = {},
+pages = {},
+title = {Rachunek prawdopodobieństwa i statystyka matematyczna. Definicje, twierdzenia, wzory},
+isbn = {978-83-89020-86-4},
+doi = {}
+}
+
+% Stable distributions
+@article{Stable_Distributions1,
+	author =  {Borak, Szymon and Hardle, K. Wolgang and Weron, Rafał},
+	title = {Stable Distributions},
+	journal = {SFB 649 Discussion Paper},
+	volume = {008},
+	number = {},
+	pages = {},
+	year = {2005},
+	DOI = {https://dx.doi.org/10.2139/ssrn.2894444}
+}
+
+@incollection{Stable_Distributions2,
+title = {13 Financial applications of stable distributions},
+series = {Handbook of Statistics},
+publisher = {Elsevier},
+volume = {14},
+pages = {393-425},
+year = {1996},
+booktitle = {Statistical Methods in Finance},
+issn = {0169-7161},
+doi = {https://doi.org/10.1016/S0169-7161(96)14015-3},
+url = {https://www.sciencedirect.com/science/article/pii/S0169716196140153},
+author = {J. Huston McCulloch}
+}
+
+@article{LevyFlights,
+author = {Boris Podobnik  and Aljoša Valentinčič  and Davor Horvatić  and H. Eugene Stanley },
+title = {Asymmetric Levy flight in financial ratios},
+journal = {Proceedings of the National Academy of Sciences},
+volume = {108},
+number = {44},
+pages = {17883-17888},
+year = {2011},
+doi = {10.1073/pnas.1113330108},
+URL = {https://www.pnas.org/doi/abs/10.1073/pnas.1113330108}
+}
+
+
+@article{Markovitz_MPT,
+	author = {Markowitz, Harry},
+	title = {Portfolio Selection},
+	journaltitle = {The Journal of Finance},
+	year = {1952},
+}
+
+
+@article{Aste_Probabilistic_Stress_Testing,
+	author = {Aste, Tomaso},
+	title = {Stress Testing and Systemic Risk Measures Using Elliptical Conditional Multivariate Probabilities},
+	journaltitle = {The Journal of Risk and Financial Management},
+	year = {2021},
+}
+
+
 % Sklar's Theorem
 @article{Sklar_Theorem,
 title={Fonctions de repartition an dimensions et leurs marges},
-author={Sklar, A},
-journal={Publications de l'Institut de statistique de l'Université de Paris},
+author={Sklar, Abe},
+journal={Publications de l'Institut de statistique de l'Universite de Paris},
 volume={8},
 pages={229--231},
 year={1959}
@@ -89,4 +156,31 @@ title = {Pricing and Hedging Spread Options},
 volume = {45},
 journal = {SIAM Review},
 doi = {10.1137/S0036144503424798}
+}
+
+% Non-Gaussianity of markets
+@Inbook{Mandelbrot_NonGaussianity,
+author="Mandelbrot, Benoit B.",
+title="The variation of certain speculative prices",
+bookTitle="Fractals and Scaling in Finance: Discontinuity, Concentration, Risk. Selecta Volume E",
+year="1997",
+publisher="Springer New York",
+address="New York, NY",
+pages="371--418",
+isbn="978-1-4757-2763-0",
+doi="10.1007/978-1-4757-2763-0_14",
+url="https://doi.org/10.1007/978-1-4757-2763-0_14"
+}
+
+@article{CDS_Copula,
+	author = {Li, David Xianglin},
+	title = {On Default Correlation: A Copula Function Approach},
+	journaltitle = {RiskMetrics},
+	year = {1999},
+}
+
+@book{MultivariateDistributions,
+	author = {Anderson, Theodore W.},
+	title = {An Introduction to Multivariate Statistical Analysis},
+	year = {2003},
 }
