--- a/002_LaTeX/modelowanie_wielowymiarowych_zmiennych_losowych.tex
+++ b/002_LaTeX/modelowanie_wielowymiarowych_zmiennych_losowych.tex
@@ -1,5 +1,18 @@
 \chapter{Modelowanie wielowymiarowych zmiennych losowych}
 
+W tym rozdziale rozważymy \textit{n}-wymiarowe wektory losowe $\mathbf{X} = [X_1, X_2, \dots, X_n]$ i połączymy klasyczne, probabilistyczne podejście do opisu ich rozkładów z teorią kopuł, zapoczątkowaną w \cite{Sklar_Theorem}.\\
+Ten rozdział zbudowany jest następująco: w \ref{sec:rozklady_laczne} przypomnimy elementy rachunku prawdopobieństwa pozwalające nam opisać czym są kopuły. Definiujemy je następnie dla przypadku dwuwymiarowego w \ref{sec:dwuwymiarowe_kopuly}, oraz rozszerzamy definicję na przypadek wielowymiarowy w \ref{sec:kopuly_w_wyzszych_wymiarach}. Rozdział \ref{sec:kopuly_w_wyzszych_wymiarach} omawia również techniczny problem konstrukcji takich kopuł, porównując konkurujące w praktyce podejścia: analityczne i Vine Copula.\\
 
+\section{Zmienne losowe i rozkłady łączne}
+\label{sec:rozklady_laczne}
+\input{zmienne_losowe_i_rozklady_laczne}
 
+\section{Dwuwymiarowe kopuły}
+\label{sec:dwuwymiarowe_kopuly}
+\input{dwuwymiarowe_kopuly}
+
+\section{Kopuły w wyższych wymiarach}
+\label{sec:kopuly_w_wyzszych_wymiarach}
+
+		
 \mgrclosechapter
