Add: copula chapter

--- a/002_LaTeX/modelowanie_wielowymiarowych_zmiennych_losowych.tex
+++ b/002_LaTeX/modelowanie_wielowymiarowych_zmiennych_losowych.tex
@@ -11,8 +11,14 @@ Ten rozdział zbudowany jest następująco: w \ref{sec:rozklady_laczne} przypomn
 \label{sec:dwuwymiarowe_kopuly}
 \input{dwuwymiarowe_kopuly}
 
+\section{Przykłady dwuwymiarowych kopuł}
+\label{sec:przyklady_dwuwymiarowych_kopul}
+\input{przyklady_dwuwymiarowych_kopul}
+
 \section{Kopuły w wyższych wymiarach}
 \label{sec:kopuly_w_wyzszych_wymiarach}
 
+\section{Przykłady zastosowań modeli kopułowych}
+\label{sec:przyklady_zastosowan_modeli_kopulowych}
 		
 \mgrclosechapter
