--- a/002_LaTeX/Parent.tex
+++ b/002_LaTeX/Parent.tex
@@ -3,6 +3,7 @@
 \usepackage{amsmath}
 \newcommand\numberthis{\addtocounter{equation}{1}\tag{\theequation}}
 \usepackage{amssymb} 
+\usepackage{mathtools}
 \usepackage{latexsym}
 \usepackage{amsthm}
 \usepackage{enumerate}
